# arbiter-mcp-guard-proxy

./: .gitignore  AI_AUTHORSHIP.md  Cargo.toml  Dockerfile  LICENSE  README.md  arbiter.example.toml  audit.toml  configure.sh  diff.diff  docker-compose.e2e.yml  docker-compose.yml  install.sh  minisign.pub  tarpaulin.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  nightly.yml  release.yml  security-audit.yml  test-install.yml  weekly-pulse.yml
.minisign/: minisign.pub
crates/arbiter/: Cargo.toml
crates/arbiter-audit/: Cargo.toml
crates/arbiter-audit/benches/: audit_ops.rs
crates/arbiter-audit/migrations/: 001_create_audit_events.sql
crates/arbiter-audit/src/: entry.rs  lib.rs  middleware.rs  redaction.rs  sink.rs  stats.rs
crates/arbiter-audit/tests/: property_tests.rs
crates/arbiter-behavior/: Cargo.toml
crates/arbiter-behavior/benches/: behavior_detection.rs
crates/arbiter-behavior/src/: classifier.rs  detector.rs  lib.rs  tracker.rs
crates/arbiter-behavior/tests/: property_tests.rs
crates/arbiter-cli/: Cargo.toml
crates/arbiter-cli/src/: main.rs
crates/arbiter-cli/tests/: cli_integration.rs
crates/arbiter-credential/: Cargo.toml
crates/arbiter-credential/benches/: credential_ops.rs
crates/arbiter-credential/src/: env_provider.rs  error.rs  file_provider.rs  inject.rs  lib.rs  provider.rs  response_classifier.rs
crates/arbiter-identity/: Cargo.toml
crates/arbiter-identity/src/: any_registry.rs  error.rs  lib.rs  model.rs  registry.rs  storage_registry.rs
crates/arbiter-lifecycle/: Cargo.toml
crates/arbiter-lifecycle/src/: api.rs  lib.rs  state.rs  token.rs
crates/arbiter-lifecycle/tests/: api_tests.rs
crates/arbiter-mcp/: Cargo.toml
crates/arbiter-mcp/benches/: mcp_parsing.rs
crates/arbiter-mcp/src/: context.rs  jsonrpc.rs  lib.rs  parser.rs
crates/arbiter-mcp/tests/: property_tests.rs
crates/arbiter-metrics/: Cargo.toml
crates/arbiter-metrics/src/: lib.rs
crates/arbiter-oauth/: Cargo.toml
crates/arbiter-oauth/src/: claims.rs  config.rs  error.rs  introspection.rs  jwks.rs  lib.rs  middleware.rs  validator.rs
crates/arbiter-oauth/tests/: jwt_validation.rs
crates/arbiter-oauth/tests/fixtures/: test_rsa_private.pem  test_rsa_private2.pem  test_rsa_public.pem  test_rsa_public2.pem
crates/arbiter-policy/: Cargo.toml
crates/arbiter-policy/benches/: policy_eval.rs
crates/arbiter-policy/src/: error.rs  eval.rs  lib.rs  model.rs  watcher.rs
crates/arbiter-policy/tests/: property_tests.rs
crates/arbiter-proxy/: Cargo.toml
crates/arbiter-proxy/src/: config.rs  lib.rs  main.rs  middleware.rs  proxy.rs  server.rs
crates/arbiter-proxy/tests/: integration.rs
crates/arbiter-session/: Cargo.toml
crates/arbiter-session/benches/: session_ops.rs
crates/arbiter-session/src/: any_store.rs  error.rs  lib.rs  middleware.rs  model.rs  storage_store.rs  store.rs
crates/arbiter-session/tests/: property_tests.proptest-regressions  property_tests.rs
crates/arbiter-storage/: Cargo.toml
crates/arbiter-storage/migrations/: 001_create_agents.sql  002_create_sessions.sql  003_create_delegation_links.sql
crates/arbiter-storage/src/: encryption.rs  error.rs  lib.rs  sqlite.rs  traits.rs
crates/arbiter-storage/tests/: restart_integration.rs
crates/arbiter/benches/: throughput.rs
crates/arbiter/src/: config.rs  handler.rs  lib.rs  main.rs  server.rs
crates/arbiter/src/stages/: anomaly_detection.rs  mod.rs  policy_evaluation.rs  session_enforcement.rs
crates/arbiter/tests/: acceptance.rs  integration.rs  load_test.rs  security_scenarios.rs
demos/: README.md
demos/01-unauthenticated-access/: README.md  config.toml  demo.sh
demos/02-protocol-injection/: README.md  config.toml  demo.sh
demos/03-tool-escalation/: README.md  config.toml  demo.sh
demos/04-resource-exhaustion/: README.md  config.toml  demo.sh
demos/05-session-replay/: README.md  config.toml  demo.sh
demos/06-zero-trust-policy/: README.md  config.toml  demo.sh
demos/07-parameter-tampering/: README.md  config.toml  demo.sh
demos/08-intent-drift/: README.md  config.toml  demo.sh
demos/09-session-multiplication/: README.md  config.toml  demo.sh
demos/10-response-exfiltration/: README.md  config.toml  demo.sh
deploy/: README.md  arbiter.toml  docker-compose.quickstart.yml  fly.toml  railway.json
docker/: arbiter-quickstart.toml  arbiter-scenario-compose.toml  echo-server.py  init-agent.sh  keycloak-realm.json  run-scenario.sh  scenario-quantumbank.toml
docker/e2e/: Dockerfile.test-runner  arbiter-demo10.toml  arbiter-e2e.toml  run-e2e-tests.sh  tainted-echo-server.py
docker/website/: Dockerfile  nginx.conf
docker/website/ssl/: nginx.crt  nginx.key
docs/: CNAME  case-study.html  index.html  llms.txt  pub-key.asc  robots.txt  sitemap.xml
docs/demos/: index.html  intent-drift.html  parameter-tampering.html  protocol-injection.html  publication-schedule.md  resource-exhaustion.html  session-replay.html  tool-escalation.html  unauthenticated-access.html  zero-trust-policy.html
docs/firewall/: index.html
docs/sphinx/: Makefile  conf.py  index.md  requirements.txt
docs/sphinx/_static/: custom.css
docs/sphinx/getting-started/: first-policy.md  first-session.md  quickstart.md
docs/sphinx/guides/: audit.md  behavior.md  credentials.md  metrics.md  policy.md  sessions.md
docs/sphinx/operating/: deployment.md  monitoring.md  troubleshooting.md
docs/sphinx/reference/: api.md  attack-scenarios.md  cli.md  configuration.md  decisions.md
docs/sphinx/understanding/: architecture.md  security-model.md  why-agent-iam.md
docs/styles/: a11y.css  home.css  shared.css  site.css
state/: BLOCKED.md  completion-log.md  current-run.json  tensions.md
templates/: README.md  eu-ai-act.toml  hipaa.toml  pci-dss.toml  soc2.toml
