[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Cyrene I."]
description = "MCP tool-call firewall: deny-by-default authorization, session management, drift detection, and audit for every tool call"
repository = "https://github.com/cyrenei/arbiter-mcp-firewall"
homepage = "https://cyrenei.github.io/arbiter-mcp-firewall"

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
