[package]
name = "arbiter-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Structured audit logging with argument redaction for the Arbiter proxy"

[dependencies]
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"

[[bench]]
name = "audit_ops"
harness = false
