[package]
name = "arbiter-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Arbiter agent lifecycle management"

[[bin]]
name = "arbiter-ctl"
path = "src/main.rs"

[dependencies]
arbiter-audit = { path = "../arbiter-audit" }
arbiter-identity = { path = "../arbiter-identity" }
arbiter-mcp = { path = "../arbiter-mcp" }
arbiter-policy = { path = "../arbiter-policy", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
arbiter-lifecycle = { path = "../arbiter-lifecycle" }
axum = { version = "0.8", features = ["json"] }
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
