[package]
name = "arbiter-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent identity model and in-memory registry for Arbiter"

[dependencies]
arbiter-storage = { path = "../arbiter-storage" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
