[package]
name = "arbiter-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Agent identity model and in-memory registry for Arbiter"

[dependencies]
arbiter-storage = { path = "../arbiter-storage", version = "0.0.11" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
