[package]
name = "arbiter-lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Agent lifecycle HTTP API for Arbiter"

[dependencies]
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
arbiter-audit = { path = "../arbiter-audit", version = "0.5.0" }
arbiter-identity = { path = "../arbiter-identity", version = "0.5.0" }
arbiter-mcp = { path = "../arbiter-mcp", version = "0.5.0" }
arbiter-metrics = { path = "../arbiter-metrics", version = "0.5.0" }
arbiter-policy = { path = "../arbiter-policy", version = "0.5.0" }
arbiter-session = { path = "../arbiter-session", version = "0.5.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
hyper = { version = "1", features = ["client", "http1"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full", "test-util"] }
