[package]
name = "arbiter-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP JSON-RPC request parser for Arbiter proxy"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"
proptest = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }

[[bench]]
name = "mcp_parsing"
harness = false
