[package]
name = "arbiter-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Prometheus-compatible metrics for the Arbiter proxy"

[dependencies]
prometheus = { version = "0.13", default-features = false, features = ["process"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
