[package]
name = "arbiter-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Deny-by-default policy engine for Arbiter authorization"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "6", optional = true }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arbiter-identity = { path = "../arbiter-identity", version = "0.5.0" }
arbiter-mcp = { path = "../arbiter-mcp", version = "0.5.0" }
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "rt"] }
toml = "0.8"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = ["watch"]
watch = ["dep:notify"]

[dev-dependencies]
criterion = "0.5"
proptest = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }

[[bench]]
name = "policy_eval"
harness = false
