[package]
name = "arbiter-session"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Task session management with budget and tool whitelisting for Arbiter"

[dependencies]
arbiter-storage = { path = "../arbiter-storage", version = "0.5.0" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros", "time"] }

[[bench]]
name = "session_ops"
harness = false
